# cfddns

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: example.json
src/: config.rs  lib.rs  main.rs
systemd/: cfddns.service  cfddns.timer
