[package]
name = "cfddns"
version = "0.1.0"
authors = ["Rob Schmidt <rwschmidt26@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A pseudo-DDNS tool for Cloudflare DNS"
readme = "README.md"
homepage = "https://github.com/robsgh/cfddns"
repository = "https://github.com/robsgh/cfddns"
keywords = ["cfddns", "cloudflare", "ddns", "dynamic ddns"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
cloudflare = "0.11.0"
json = "0.12.4"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
